# lavi

./: .gitattributes  .gitmodules  CMakeLists.txt  Dockerfile  README.md  example.andy  natvis.xml  ui.html
.github/: copilot-instructions.md
.github/workflows/: build-ubuntu-22.04.yml  build-ubuntu-24.04.yml  build-windows-2022.yml  ci.yml
andy-engine/: application.lv  style.lv
build-asan/: CMakeCache.txt  Makefile  andy-test  cmake_install.cmake  http_spec  lavi-langConfig.cmake  lavi-langConfigVersion.cmake
cmake/: lavi-langConfig.cmake.in
examples/: class.lv  exception.lv  function.lv  minimal.lv
examples/project/: package.yaml
examples/project/lib/: say.lv
examples/project/src/: main.lv
experiments/: run_experiment.sh
experiments/loop/: loop.lv
experiments/some/: compilation.cpp
include/andy/lang/: api.hpp  class.hpp  extension.hpp  function.hpp  hash.hpp  interpreter.hpp  interpreter_context.hpp  lang.hpp  lexer.hpp  object.hpp  parser.hpp  preprocessor.hpp
include/lavi/lang/: api.hpp  class.hpp  classes.hpp  config.hpp  error.hpp  exception.hpp  extension.hpp  function.hpp  hash.hpp  interpreter.hpp  interpreter_context.hpp  lang.hpp  lexer.hpp  object.hpp  parser.hpp  preprocessor.hpp  scope.hpp  yaml.hpp
lct-comics/: application.lv
src/: analyzer.cpp  andyc++.cpp  api.cpp  builtin_libs.cpp  class.cpp  config.cpp  error.cpp  exception.cpp  extension.cpp  function.cpp  function_call.cpp  hash.cpp  interpreter.cpp  interpreter_context.cpp  lavi.cpp  lexer.cpp  object.cpp  parser.cpp  preprocessor.cpp  std_functions.cpp  yaml.cpp
src/builtin_libs/drawing_extension/src/: dialog_class.cpp  window_class.cpp
src/builtin_libs/net_extension/: CMakeLists.txt
src/builtin_libs/net_extension/src/: http_class.cpp  net_class.cpp  net_extension.cpp  net_extension_unavailable.cpp  response_class.cpp
src/builtin_libs/ui_extension/src/: app_class.cpp  xml_page_class.cpp
src/builtin_libs/yaml_extension/: CMakeLists.txt
src/builtin_libs/yaml_extension/src/: yaml_class.cpp  yaml_extension.cpp
src/classes/: add_operators.hpp  andy_config_class.cpp  array_class.cpp  class_class.cpp  directory_class.cpp  double_class.cpp  exception_class.cpp  false_class.cpp  file_class.cpp  float_class.cpp  function_class.cpp  hash_class.cpp  integer_class.cpp  null_class.cpp  path_class.cpp  random_class.cpp  std_class.cpp  string_class.cpp  system_class.cpp  true_class.cpp
std/: tests.andy  tests.lv
tests/andy-lang/: lexer_spec.cpp
tests/fixtures/: fn.lv
tests/high-level/: class_spec.andy  class_spec.lv  conditional_spec.andy  enum_spec.andy  enum_spec.lv  fn_spec.andy  fn_spec.lv  hash_spec.andy  hash_spec.lv  loop_spec.lv  missing_spec.lv  namespace_spec.andy  namespace_spec.lv  net_spec.lv  preprocessor_spec.lv  std_functions_spec.lv  var_spec.lv  yield_spec.lv
tests/std/: array_spec.lv  dir_spec.lv  hash_spec.lv  net_spec.lv  path_spec.lv  string_spec.lv  yaml_spec.lv
utility/: cerri.lv  cxx.lv  cxx2andy.andy  debugger.andy  hello.lv  tests.andy  tests.lv
utility/cxx/: lexer.andy  lexer.lv  package.yaml  package.yml  token.andy
utility/cxx/lib/: lexer.lv  token.lv
utility/cxx/lib/tokens/: base.lv  comment.lv  comment_matcher.lv  end_of_file.lv  end_of_file_matcher.lv  matcher.lv  preprocessor_matcher.lv
utility/cxx/src/: main.lv
utility/cxx/src/tokens/: base.lv  comment.lv  end_of_file.lv
utility/cxx/token_matchers/: base.andy  end_of_file.andy  end_of_file.lv
utility/cxx/tokens/: base.lv  comment.lv  end_of_file.lv
utility/debugger/: linux.andy
utility/debugger/linux/: address_from_symbol.andy  debugger.andy
win32/: installer.cpp  resources.rc
